--- a/scss/_registro.scss
+++ b/scss/_registro.scss
@@ -7,7 +7,7 @@ $color-blanco: #fff;
     box-sizing: border-box;
 }
 
-body{
+#body__Registro{
     display: flex;
     align-items: center;
     justify-content: center;
