error en el _autos (sin comas)

--- a/scss/_autos.scss
+++ b/scss/_autos.scss
@@ -3,13 +3,13 @@
 }
 
 $areasGrid:(
-    honda: honda
-    audi: audi
-    chevr: chevr
-    rena: rena
-    ford: ford
-    fiat: fiat
-    niss: niss
+    honda: honda,
+    audi: audi,
+    chevr: chevr,
+    rena: rena,
+    ford: ford,
+    fiat: fiat,
+    niss: niss,
 );
 
 #tieAut__Main{
