--- a/css/main.css
+++ b/css/main.css
@@ -170,31 +170,60 @@ footer {
   width: 80px;
   height: 80px; }
 
-.div__div-logoYimg {
-  width: 100%;
-  display: flex;
-  justify-content: center; }
-  .div__div-logoYimg .div__logoYimg {
-    display: flex;
-    flex-direction: column; }
-    .div__div-logoYimg .div__logoYimg .logo {
-      display: flex;
-      justify-content: center; }
-      .div__div-logoYimg .div__logoYimg .logo img {
-        width: 50%; }
-    .div__div-logoYimg .div__logoYimg h1 {
-      text-align: center; }
+#tieAut__Main {
+  padding: 0%, 5%, 5%, 0%;
+  display: grid;
+  height: 1000px;
+  grid-template-rows: repeat(7, 1fr);
+  grid-template-areas: 'honda' 'audi' 'chevrolet' 'renault' 'ford' 'fiat' 'nissan';
+  grid-column-gap: 20px;
+  grid-row-gap: 20px; }
+
+#honda, #audi, #chevrolet, #renault, #ford, #fiat, #nissan {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr) 2fr;
+  grid-template-columns: 3fr 1fr; }
+
+/*------HONDA------*/
+#honda {
+  grid-area: honda;
+  grid-template-areas: 'hondaImg hondaModelo' 'hondaImg hondaPrecio' 'hondaImg hondaToTerr' 'hondaImg hondaEnergia' 'hondaDesc hondaDesc'; }
+
+/*------AUDI------*/
+#audi {
+  grid-area: audi;
+  grid-template-areas: 'audiImg audiModelo' 'audiImg audiPrecio' 'audiImg audiToTerr' 'audiImg audiEnergia' 'audiDesc audiDesc'; }
+
+/*------CHEVROLET------*/
+#chevrolet {
+  grid-area: chevrolet;
+  grid-template-areas: 'chevrImg chevrModelo' 'chevrImg chevrPrecio' 'chevrImg chevrToTerr' 'chevrImg chevrEnergia' 'chevrDesc chevrDesc'; }
+
+/*------RENAULT------*/
+#renault {
+  grid-area: renault;
+  grid-template-areas: 'renaImg renaModelo' 'renaImg renaPrecio' 'renaImg renaToTerr' 'renaImg renaEnergia' 'renaDesc renaDesc'; }
+
+/*------FORD------*/
+#ford {
+  grid-area: ford;
+  grid-template-areas: 'fordImg fordModelo' 'fordImg fordPrecio' 'fordImg fordToTerr' 'fordImg fordEnergia' 'fordDesc fordDesc'; }
+
+/*------FIAT------*/
+#fiat {
+  grid-area: fiat;
+  grid-template-areas: 'fiatImg fiatModelo' 'fiatImg fiatPrecio' 'fiatImg fiatToTerr' 'fiatImg fiatEnergia' 'fiatDesc fiatDesc'; }
+
+/*------NISSAN------*/
+#nissan {
+  grid-area: nissan;
+  grid-template-areas: 'nissImg nissModelo' 'nissImg nissPrecio' 'nissImg nissToTerr' 'nissImg nissEnergia' 'nissDesc nissDesc'; }
 
 #mainC {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto;
-  grid-template-areas: 'h1 h1 h1'
- 'img1 img2 img3'
- 'm1 t1 r1'
- 'd1 d2 d3'
- 'h2 h2 h2'
- 'i1 i2 i3';
+  grid-template-areas: 'h1 h1 h1' 'img1 img2 img3' 'm1 t1 r1' 'd1 d2 d3' 'h2 h2 h2' 'i1 i2 i3';
   justify-items: center;
   align-items: center;
   gap: 10px; }
