--- a/css/main.css
+++ b/css/main.css
@@ -315,69 +315,74 @@ footer {
   padding: 20px;
   background-color: goldenrod; }
 
+.prods__encabezado {
+  height: 500px; }
+
 .prods__carrusel img {
   border: solid 4px black; }
 
-.prods__info .prods__volver {
-  position: absolute;
-  width: 100%;
-  transform: translate(40%); }
-  .prods__info .prods__volver a {
-    font-size: 25px;
-    color: black;
-    text-decoration: none !important;
-    background-color: red;
-    transition: all .2s;
-    padding-inline: 5px;
-    padding-block: 3px;
-    border: solid 2px #181818; }
-    .prods__info .prods__volver a:hover {
-      color: white;
-      background-color: darkred; }
-
-.prods__info h2 {
-  font-size: 50px;
-  color: black;
-  text-decoration: underline !important; }
-
-.prods__info table {
-  margin-left: 10%; }
-  .prods__info table tr td {
-    font-size: 35px;
-    padding-block: 10px;
-    color: black; }
-
-.prods__info .prods__dato {
-  padding-left: 12px; }
-
-.prods__info .prods__carac {
-  margin-block: 5px; }
-  .prods__info .prods__carac h5 {
-    font-size: 35px;
-    color: black;
-    text-decoration: none !important; }
-
-.prods__info .prods__contacto {
-  display: flex;
-  width: 100%;
-  height: 20%;
-  justify-content: center;
-  align-items: center; }
-  .prods__info .prods__contacto button {
-    padding: 5px;
-    height: 40%;
-    background-color: yellow;
-    transition: all .2s; }
-    .prods__info .prods__contacto button a {
+.prods__info {
+  height: 100%; }
+  .prods__info .prods__volver {
+    position: absolute;
+    width: 100%;
+    transform: translate(40%); }
+    .prods__info .prods__volver a {
+      box-shadow: 0px 0px 10px black;
       font-size: 25px;
       color: black;
       text-decoration: none !important;
+      background-color: red;
+      transition: all .2s;
+      padding-inline: 5px;
+      padding-block: 3px;
+      border: solid 2px #181818;
+      border-radius: 8px; }
+      .prods__info .prods__volver a:hover {
+        color: white;
+        box-shadow: 0px 0px 10px darkred; }
+  .prods__info h2 {
+    height: 10%;
+    font-size: 50px;
+    color: black;
+    text-decoration: underline !important; }
+  .prods__info table {
+    height: 80%;
+    margin-left: 10%; }
+    .prods__info table tr td {
+      font-size: 25px;
+      color: black; }
+  .prods__info .prods__dato {
+    padding-left: 12px; }
+  .prods__info .prods__carac {
+    margin-block: 5px; }
+    .prods__info .prods__carac h5 {
+      font-size: 35px;
+      color: black;
+      text-decoration: none !important; }
+  .prods__info .prods__contacto {
+    display: flex;
+    width: 100%;
+    height: 10%;
+    justify-content: center;
+    align-items: center; }
+    .prods__info .prods__contacto button {
+      box-shadow: 0px 0px 10px black;
+      border-radius: 8px;
+      padding: 5px;
+      height: 100%;
+      background-color: red;
       transition: all .2s; }
-    .prods__info .prods__contacto button:hover {
-      background-color: darkgoldenrod;
-      transform: scale(1.2); }
-      .prods__info .prods__contacto button:hover a {
-        color: white; }
+      .prods__info .prods__contacto button a {
+        font-size: 25px;
+        color: black;
+        text-decoration: none !important;
+        transition: all .2s; }
+      .prods__info .prods__contacto button:hover {
+        transform: scale(1.05, 0.95);
+        box-shadow: 0px 0px 20px darkred; }
+        .prods__info .prods__contacto button:hover a {
+          color: white; }
 
 .prods__descripcion {
   padding-top: 10px;
