--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -11,6 +11,10 @@
     background-color: goldenrod;
 }
 
+.prods__encabezado{
+    height: 500px;
+}
+
 .prods__carrusel{
     img{
         border: solid 4px black;
@@ -18,34 +22,38 @@
 }
 
 .prods__info{
+    height: 100%;
     .prods__volver{
         position: absolute;
         width: 100%;
         transform: translate(40%);
         a{
+            box-shadow: 0px 0px 10px black;
             @include valoresFuente(25px, black, none);
             background-color: red;
             transition: all .2s;
             padding-inline: 5px;
             padding-block: 3px;
             border: solid 2px rgb(24, 24, 24);
+            border-radius: 8px;
             &:hover{
                 color: white;
-                background-color: darkred;
+                box-shadow: 0px 0px 10px darkred;
             }
         }
     }
 
     h2{
+        height: 10%;
         @include valoresFuente(50px, black, underline)
     }
     
     table{
+        height: 80%;
         margin-left: 10%;
         tr{
             td{
-                font-size: 35px;
-                padding-block: 10px;
+                font-size: 25px;
                 color: black;
             }
         }
@@ -65,21 +73,24 @@
     .prods__contacto{
         display: flex;
         width: 100%;
-        height: 20%;
+        height: 10%;
         justify-content: center;
         align-items: center;
+        
         button{
+            box-shadow: 0px 0px 10px black;
+            border-radius: 8px;
             padding: 5px;
-            height: 40%;
-            background-color: yellow;
+            height: 100%;
+            background-color: red;
             transition: all .2s;
             a{
                 @include valoresFuente(25px, black, none);
                 transition: all .2s;
             }
             &:hover{
-                background-color: darkgoldenrod;
-                transform: scale(1.2);
+                transform: scale(1.05, 0.95);
+                box-shadow: 0px 0px 20px darkred;
                 a{    
                     color: white;
                 }
