--- a/css/main.css
+++ b/css/main.css
@@ -170,24 +170,62 @@ footer {
   width: 80px;
   height: 80px; }
 
+.noSeVe {
+  display: none; }
+
 #tieAut__Main {
-  padding: 0%, 5%, 5%, 0%;
+  padding: 0% 5% 0% 5%;
   display: grid;
   height: 1000px;
   grid-template-rows: repeat(7, 1fr);
   grid-template-areas: 'honda' 'audi' 'chevrolet' 'renault' 'ford' 'fiat' 'nissan';
-  grid-column-gap: 20px;
   grid-row-gap: 20px; }
 
 #honda, #audi, #chevrolet, #renault, #ford, #fiat, #nissan {
   display: grid;
-  grid-template-rows: repeat(4, 1fr) 2fr;
-  grid-template-columns: 3fr 1fr; }
+  grid-template-rows: 1fr 8fr;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 20px; }
 
 /*------HONDA------*/
 #honda {
   grid-area: honda;
-  grid-template-areas: 'hondaImg hondaModelo' 'hondaImg hondaPrecio' 'hondaImg hondaToTerr' 'hondaImg hondaEnergia' 'hondaDesc hondaDesc'; }
+  grid-template-areas: 'titHonda titHonda titHonda' 'honda1 honda2 honda3';
+  grid-column-gap: 20px; }
+  #honda #honda1 {
+    grid-area: honda1; }
+    #honda #honda1:hover #hondaDatos1 {
+      display: grid;
+      grid-template-rows: repeat(4, 1fr) 2fr;
+      grid-template-areas: "hondaModelo1" "hondaPrecio1" "hondaToTerr1" "hondaEnergia1" "hondaDesc1"; }
+  #honda #honda2 {
+    grid-area: honda2; }
+    #honda #honda2:hover #hondaDatos2 {
+      display: grid;
+      grid-template-rows: repeat(4, 1fr) 2fr;
+      grid-template-areas: "hondaModelo2" "hondaPrecio2" "hondaToTerr2" "hondaEnergia2" "hondaDesc2"; }
+  #honda #honda3 {
+    grid-area: honda3; }
+    #honda #honda3:hover #hondaDatos3 {
+      display: grid;
+      grid-template-rows: repeat(4, 1fr) 2fr;
+      grid-template-areas: "hondaModelo3" "hondaPrecio3" "hondaToTerr3" "hondaEnergia3" "hondaDesc3"; }
+  #honda h2 {
+    margin: 0%;
+    padding: 0%;
+    grid-area: titHonda;
+    text-align: center; }
+
+#hondaModelo1 {
+  grid-area: hondaModelo1; }
+
+#hondaImg1, #hondaImg2, #hondaImg3 {
+  height: 100%;
+  position: absolute; }
+
+#hondaDatos1, #hondaDatos2, #hondaDatos3 {
+  display: none;
+  position: absolute; }
 
 /*------AUDI------*/
 #audi {
