--- a/css/main.css
+++ b/css/main.css
@@ -565,6 +565,9 @@ footer {
 .form-body input[type="password"] {
   margin-top: 20px; }
 
+.form-body input[type="text"] {
+  margin-top: 20px; }
+
 ::placeholder {
   font-size: 1rem;
   color: azure; }
@@ -593,3 +596,10 @@ footer {
   color: #d5dbdd;
   border: 2px solid #3498db;
   background: linear-gradient(#34495e, #2c3e50); }
+
+#link {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  align-items: center;
+  color: white; }
