--- a/scss/_sesion.scss
+++ b/scss/_sesion.scss
@@ -109,6 +109,6 @@ $color-blanco: #fff;
     display: flex;
     justify-content: center;
     text-decoration: none;
-    
     color: white;
+    margin-top: 20px;
 }
