--- a/scss/_autos.scss
+++ b/scss/_autos.scss
@@ -25,7 +25,6 @@ $areasHonda:(
 #tieAut__Main{
     @include padding(0%, 5%, 0%, 5%);
     display: grid;
-    height: 1000px;
 
     grid-template-rows: repeat(7, 1fr);
     grid-template-areas: 
@@ -83,6 +82,10 @@ $areasHonda:(
         text-align: center;
     }
 
+    img{
+        width: 100%;
+    }
+
     
 
     grid-column-gap: 20px;
@@ -93,8 +96,7 @@ $areasHonda:(
 }
 
 #hondaImg1, #hondaImg2, #hondaImg3{
-    height: 100%;
-    position: absolute;
+    height: 0;
 }
 
 #hondaDatos1, #hondaDatos2, #hondaDatos3{
