--- a/css/main.css
+++ b/css/main.css
@@ -366,6 +366,7 @@ footer {
     width: 100%;
     transform: translate(40%); }
     .prods__info .prods__volver a {
+      overflow-x: hidden;
       box-shadow: 0px 0px 10px black;
       font-size: 25px;
       color: black;
