--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -28,6 +28,7 @@
         width: 100%;
         transform: translate(40%);
         a{
+            overflow-x: hidden;
             box-shadow: 0px 0px 10px black;
             @include valoresFuente(25px, black, none);
             background-color: red;
