--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,7 @@
     padding: 0;
 }
 
-body{
+#bodymain{
     background: repeating-linear-gradient(
         45deg,
         rgb(100, 100, 100),
@@ -27,7 +27,7 @@ body{
     align-items: center;
 }
 
-#logo{
+#logomain{
     margin: 0;
     padding: 0;
     width: 30%;
