--- a/css/main.css
+++ b/css/main.css
@@ -418,7 +418,7 @@ footer {
 @media (max-width: 768px) {
   #mainC {
     grid-template-columns: 1fr;
-    grid-template-areas: 'h1' 'img1' 'img2' 'img3' 'm1' 't1' 'r1' 'h2' 'i1' 'i2' 'i3' 'img' 'ct'; }
+    grid-template-areas: 'h1' 'img1' 'm1' 'img2' 't1' 'img3' 'r1' 'h2' 'i1' 'i2' 'i3' 'img' 'ct'; }
   #img1c, #img2c, #img3c, #if1c, #if2c, #if3c {
     width: 80%;
     /* Ajusta el ancho al 80% del contenedor */
