--- a/scss/_cliente.scss
+++ b/scss/_cliente.scss
@@ -1,3 +1,11 @@
+
+$areasgridConsulta:(
+    1:img1,
+    2:img2,
+    3:img3,
+);
+
+
 #mainC {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -46,16 +54,10 @@
     object-fit: cover;
 }
 
-#img1c{
-    grid-area: img1;
-}
-
-#img2c{
-    grid-area: img2;
-}
-
-#img3c{
-    grid-area: img3;
+@each $num, $area in $areasgridConsulta{
+    #img#{$num}c{
+        grid-area: $area;
+    }
 }
 
 #p1c, #p2c, #p3c{
@@ -166,10 +168,10 @@
         grid-template-areas:
             'h1'
             'img1'
-            'img2'
-            'img3'
             'm1'
+            'img2'
             't1'
+            'img3'
             'r1'
             'h2'
             'i1'
