modifique el registro

--- a/scss/_registro.scss
+++ b/scss/_registro.scss
@@ -13,7 +13,7 @@ $color-blanco: #fff;
     justify-content: center;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(27deg, #d49090 50%, #b17272, #b61111a1 50%, #aa1b1b);
+    background: linear-gradient(27deg, #34495e 50%, #2c3e50 50%);
 
 }
 
