Registro // Inicio sesion arreglado

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,8 +3,7 @@
 @import "autos";
 @import "cliente";
 @import "productos";
-@import "registro";
-@import "sesion";
+@import "registro-inicioSesion";
 @import "ventaAutos";
 
 *{
