--- a/scss/_registro-inicioSesion.scss
+++ b/scss/_registro-inicioSesion.scss
@@ -13,7 +13,7 @@ $color-blanco: #fff;
     justify-content: center;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(27deg, #34495e 50%, #2c3e50 50%);
+    background: linear-gradient(27deg, #d49090 50%, #b17272, #b61111a1 50%, #aa1b1b);
 
 }
 
@@ -101,4 +101,16 @@ $color-blanco: #fff;
     border: 3px solid #9b0000;
     background: linear-gradient(#aa1b1b,#c72c2c);
 
+}
+
+#link{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    margin-top: 20px;
+}
+
+.form-body input[type="text"]{
+    margin-top: 20px;
 }
