--- a/css/main.css
+++ b/css/main.css
@@ -628,6 +628,7 @@ footer {
   margin: auto;
   height: 40px;
   width: 75%;
+  font-size: 15px;
   padding-left: 10px;
   color: #fff;
   border: 1px solid #fff;
