--- a/scss/_registro-inicioSesion.scss
+++ b/scss/_registro-inicioSesion.scss
@@ -48,6 +48,7 @@ $color-blanco: #fff;
     margin: auto;
     height: 40px;
     width: 75%;
+    font-size: 15px;
     padding-left: 10px;
     color: $color-blanco;
     border: 1px solid $color-blanco;
